--- a/GifImageView/GifImageView.csproj
+++ b/GifImageView/GifImageView.csproj
@@ -11,6 +11,7 @@
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <AssemblyName>Refractored.GifImageView</AssemblyName>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,7 +52,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <ItemGroup>
-    <LibraryProjectZip Include="..\external\library\build\outputs\aar\library-release.aar">
+    <LibraryProjectZip Include="..\..\GifImageView\library\build\outputs\aar\library-release.aar">
       <Link>library-release.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
