--- a/Refractored.GifImageView.nuspec
+++ b/Refractored.GifImageView.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.7.2">
        <id>Refractored.GifImageView</id>
-       <version>2.0.0</version>
+       <version>2.2.0</version>
        <title>GifImageView for Xamarin.Android</title>
        <authors>James Montemagno</authors>
        <owners>James Montemagno</owners>
@@ -18,8 +18,9 @@
        <dependencies>
        </dependencies>
        <releaseNotes>
-       [2.0.0]
-       -Update to latest library, includes transparent gif support
+       [2.2.0]
+       -Update to latest library, includes new OnAnimationStart callback, add support for gifs with a loop count specified.
+	   -IOnFrameAvailableListener name change to IOnFrameAvailable
        -Ensure if you implement IOnFrameAvailableListener you call GC.Collect(); in the method
      </releaseNotes>
    </metadata>
